Stop using deprecated number constructors.
Change-Id: I2e5be7b507b5e0363c4be900bba6b1d716c0b170
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>